<?xml version="1.0"?>
<package format="2">
  <name>smp_ros</name>
  <version>1.0.1</version>
  <description>The smp_ros package</description>

  <maintainer email="chittaranjan.swaminathan@oru.se">Chittaranjan Srinivas Swaminathan</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>nav_core</depend>
  <depend>costmap_2d</depend>
  <depend>mrpt</depend>

  <export>
    <nav_core plugin="${prefix}/plugins.xml" />
  </export>
</package>
